--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@ footer ul {
         <div class="container mx-auto px-6">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0 animate__animated animate__fadeInLeft">
-                    <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold leading-tight mb-6">
-                        AI-Powered <span class="text-accent">Project Cost</span> Estimation
-                    </h1>
+                    <h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold leading-tight md:leading-tight lg:leading-tight mb-6 bg-transparent">
+                    AI-Powered <span class="text-accent drop-shadow-lg bg-transparent">Project Cost</span> Estimation
+                </h1>
                     <p class="text-xl lg:text-2xl mb-8 opacity-90 leading-relaxed">
                         Accurate cost predictions using machine learning to eliminate budget overruns and optimize resource allocation.
                     </p>
