--- a/index.html
+++ b/index.html
@@ -680,8 +680,8 @@ footer ul {
   
   <!-- Downloads section - kept original IDs, just styled text color -->
   <div class="downloads">
-    <button id="downloadCSVBtn" class="text-black">Download CSV</button>
-    <button id="generateReceipt" class="text-black">Generate Receipt PDF</button>
+    <button id="downloadCSVBtn"  class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 active:bg-blue-800 transition-colors" >Download CSV</button>
+    <button id="generateReceipt" class="px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 active:bg-green-800 transition-colors ml-2">Generate Receipt PDF</button>
   </div>
   
   <!-- Suggestions section - kept original structure, just changed text color -->
@@ -1167,6 +1167,5 @@ async function loadSuggestions() {
 
 // Load suggestions on page load
 window.onload = loadSuggestions;
-
       </script>
      </html>
