--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ footer ul {
                     </div>
                     <h3 class="text-xl font-bold mb-3 text-[#2563eb]">Data-Driven Predictions</h3>
                     <p class="text-gray-600">Our ML model analyzes historical project data to provide the most accurate cost estimates in the industry.</p>
-                    <a href="#" class="inline-flex items-center mt-4 text-primary font-medium group">
+                    <a href="https://data-driven-predictions.vercel.app/" class="inline-flex items-center mt-4 text-primary font-medium group">
                         Learn more
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1 group-hover:translate-x-1 transition-transform" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
