--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ footer ul {
                     </div>
                    <h3 class="text-xl font-bold mb-3 text-emerald-600">Budget Optimization</h3>
                     <p class="text-gray-600">Identify cost-saving opportunities and allocate resources more efficiently with our optimization algorithms.</p>
-                    <a href="#" class="inline-flex items-center mt-4 text-primary font-medium group">
+                    <a href="https://budget-optimization.vercel.app/" class="inline-flex items-center mt-4 text-primary font-medium group">
                         Learn more
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1 group-hover:translate-x-1 transition-transform" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
