--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ footer ul {
                     </div>
                     <h3 class="text-xl font-bold mb-3 text-yellow-500">Interactive Reports</h3>
                     <p class="text-gray-600">Generate detailed reports with visualizations that break down cost components and risk factors.</p>
-                    <a href="#" class="inline-flex items-center mt-4 text-primary font-medium group">
+                    <a href="https://interactive-reports.vercel.app/" class="inline-flex items-center mt-4 text-primary font-medium group">
                         Learn more
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1 group-hover:translate-x-1 transition-transform" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
