--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Cost Estimator | AI-Powered Estimation Tool</title>
+    <title>Project Cost Estimation Tool</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
@@ -341,7 +341,7 @@ footer ul {
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0 animate__animated animate__fadeInLeft">
                     <h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold leading-tight md:leading-tight lg:leading-tight mb-6 bg-transparent">
-                    AI-Powered <span class="text-accent drop-shadow-lg bg-transparent">Project Cost</span> Estimation
+                     <span class="text-accent drop-shadow-lg bg-transparent">Project Cost</span> Estimation
                 </h1>
                     <p class="text-xl lg:text-2xl mb-8 opacity-90 leading-relaxed">
                         Accurate cost predictions using machine learning to eliminate budget overruns and optimize resource allocation.
